--- a/src/main/resources/templates/detailsFacture.html
+++ b/src/main/resources/templates/detailsFacture.html
@@ -1175,7 +1175,7 @@
                                             </td>
                                             <td class="text-right">
                                                 <div class="pb-3">
-                                                    M. Yassine Lamouadden
+                                                    Marine Royale
                                                 </div>
                                             </td>
                                         </tr>
