--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -11,10 +11,10 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <title>List of Clients</title>
+        <title>Liste des Clients</title>
 
         <div class="card">
-            <div class="card-header">List of Clients</div>
+            <div class="card-header">Liste des Clients</div>
             <div class="card-body">
                 <form th:action="@{index}" method="get">
                     <label>Keyword</label>
@@ -61,7 +61,7 @@
                     </li>
                 </ul>
                 <a class="btn btn-success mt-2" th:href="@{/formClients}">
-                    Add New Client
+                    Ajouter Client
                 </a>
             </div>
         </div>
