--- a/src/main/resources/templates/enteteFacture.html
+++ b/src/main/resources/templates/enteteFacture.html
@@ -11,10 +11,10 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <title>List of Factures</title>
+        <title>Liste des Factures</title>
 
         <div class="card">
-            <div class="card-header">List of Factures</div>
+            <div class="card-header">Liste des Factures</div>
             <div class="card-body">
                 <form th:action="@{enteteFactures}" method="get">
                     <label>Keyword</label>
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
                 <a class="btn btn-success mt-2" th:href="@{/formEnteteFacture}">
-                    Add New Facture
+                    Ajouter Facture
                 </a>
             </div>
         </div>
