--- a/src/main/resources/templates/polices.html
+++ b/src/main/resources/templates/polices.html
@@ -11,7 +11,7 @@
 <div layout:fragment="content1">
     <div class="container mt-2">
         <div class="card">
-            <div class="card-header">List of Polices</div>
+            <div class="card-header">Liste des Polices</div>
             <div class="card-body">
                 <form th:action="@{/polices}" method="get">
                     <label for="keyword">Keyword</label>
@@ -47,7 +47,7 @@
                 </table>
 
 
-                <a class="btn btn-success mt-2" th:href="@{/formPolice}">Add New Police</a>
+                <a class="btn btn-success mt-2" th:href="@{/formPolice}">Ajouter Police</a>
             </div>
         </div>
     </div>
