--- a/src/main/resources/templates/ports.html
+++ b/src/main/resources/templates/ports.html
@@ -11,9 +11,9 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <h1>List of Ports</h1>
+        <h1>Liste des Ports</h1>
         <div class="card">
-            <div class="card-header">List of Ports</div>
+            <div class="card-header">Liste des Ports</div>
             <div class="card-body">
                 <form th:action="@{/ports}" method="get" class="mb-3">
                     <label>Keyword</label>
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a class="btn btn-success mt-2" th:href="@{/formPorts}">Add New Port</a>
+                <a class="btn btn-success mt-2" th:href="@{/formPorts}">Ajouter Port</a>
             </div>
         </div>
     </div>
