--- a/src/main/resources/templates/releve.html
+++ b/src/main/resources/templates/releve.html
@@ -11,9 +11,9 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <h1>List of Releves</h1>
+        <h1>Liste des Releves</h1>
         <div class="card">
-            <div class="card-header">List of Releves</div>
+            <div class="card-header">Liste des Releves</div>
             <div class="card-body">
                 <form th:action="@{/releves}" method="get" class="mb-3">
                     <label>Start Date</label>
@@ -61,7 +61,7 @@
                     </tbody>
                 </table>
 
-                <a class="btn btn-success mt-2" th:href="@{/formReleve}">Add New Releve</a>
+                <a class="btn btn-success mt-2" th:href="@{/formReleve}">Ajouter nouveau Releve</a>
             </div>
         </div>
     </div>
