--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -72,19 +72,19 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Clients
+                        Ports
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formClients}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/formPorts}">Nouveau</a></li>
                         <li><a class="dropdown-item" th:href="@{/index}">Chercher</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Ports
+                        Clients
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formPorts}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/formClients}">Nouveau</a></li>
                         <li><a class="dropdown-item" th:href="@{/ports}">Chercher</a></li>
                     </ul>
                 </li>
@@ -99,20 +99,20 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Releves
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formReleve}">Nouveau</a></li>
-                        <li><a class="dropdown-item" th:href="@{/releves}">Chercher</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         TypePolices
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" th:href="@{/formTypePolice}">Nouveau</a></li>
                         <li><a class="dropdown-item" th:href="@{/typePolices}">Chercher</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Releves
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formReleves}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/Releves}">Chercher</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
