--- a/src/main/resources/templates/typePolice.html
+++ b/src/main/resources/templates/typePolice.html
@@ -11,9 +11,9 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <h1>List of TypePolices</h1>
+        <h1>Liste des TypePolices</h1>
         <div class="card">
-            <div class="card-header">List of TypePolices</div>
+            <div class="card-header">Liste des TypePolices</div>
             <div class="card-body">
                 <form th:action="@{/typePolices}" method="get" class="mb-3">
                     <label>Keyword</label>
@@ -48,7 +48,7 @@
 <!--                        </li>-->
 <!--                    </ul>-->
 <!--                </nav>-->
-                <a class="btn btn-success mt-2" th:href="@{/formTypePolice}">Add New TypePolice</a>
+                <a class="btn btn-success mt-2" th:href="@{/formTypePolice}">Ajouter TypePolice</a>
             </div>
         </div>
     </div>
