--- a/src/main/resources/templates/formReleve.html
+++ b/src/main/resources/templates/formReleve.html
@@ -12,7 +12,7 @@
 <div layout:fragment="content1">
     <div class="container mt-2">
         <div class="card">
-            <div class="card-header">New Releve</div>
+            <div class="card-header">Nouveau Releve</div>
             <div class="card-body">
                 <form th:action="@{/saveReleve}" th:object="${releve}" method="post">
                     <div class="form-group">
