--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -111,8 +111,8 @@
                         Releves
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formReleves}">Nouveau</a></li>
-                        <li><a class="dropdown-item" th:href="@{/Releves}">Chercher</a></li>
+                        <li><a class="dropdown-item" th:href="@{/formReleve}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/releves}">Chercher</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
