--- a/src/main/resources/templates/editClients.html
+++ b/src/main/resources/templates/editClients.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-4">Edit Client</h1>
+                <h1 class="mb-4">Mettre à jour Client</h1>
             </div>
             <div class="card-body">
                 <!-- Ensure th:action is correctly set to /save or another appropriate URL -->
@@ -53,7 +53,7 @@
                         <span class="text-danger" th:if="${#fields.hasErrors('CIN')}" th:errors="*{CIN}"></span>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Update Client</button>
+                    <button type="submit" class="btn btn-primary">Modifier</button>
                 </form>
             </div>
         </div>
