--- a/src/main/resources/templates/formReleve.html
+++ b/src/main/resources/templates/formReleve.html
@@ -49,7 +49,7 @@
                         </select>
                         <div th:if="${#fields.hasErrors('police')}" th:errors="*{police}" class="text-danger"></div>
                     </div>
-                    <button type="submit" class="btn btn-success mt-2">Save</button>
+                    <button type="submit" class="btn btn-success mt-2">Ajouter</button>
                 </form>
             </div>
         </div>
