--- a/src/main/resources/templates/editPort.html
+++ b/src/main/resources/templates/editPort.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-4">Edit Port</h1>
+                <h1 class="mb-4">Mettre à jour Port</h1>
             </div>
             <div class="card-body">
                 <form th:action="@{/savePort}" th:object="${port}" method="post">
@@ -27,7 +27,7 @@
                         <label>Taux Taxe Regional</label>
                         <input type="number" step="0.01" th:field="*{tauxTaxeRegional}" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-primary">Update Port</button>
+                    <button type="submit" class="btn btn-primary">Modifier Port</button>
                 </form>
             </div>
         </div>
