--- a/src/main/resources/templates/editReleve.html
+++ b/src/main/resources/templates/editReleve.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-4">Edit Releve</h1>
+                <h1 class="mb-4">Mettre à jour Releve</h1>
             </div>
             <div class="card-body">
                 <form th:action="@{/saveReleve}" th:object="${releve}" method="post">
@@ -47,7 +47,7 @@
                                     th:text="${police.getTarif().toString() + police.getTypePolice().toString()}"></option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">Update Releve</button>
+                    <button type="submit" class="btn btn-primary">Modifier Releve</button>
                 </form>
             </div>
         </div>
