--- a/src/main/resources/templates/editTypePolice.html
+++ b/src/main/resources/templates/editTypePolice.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-4">Edit TypePolice</h1>
+                <h1 class="mb-4">Mettre à jour Type Police</h1>
             </div>
             <div class="card-body">
                 <form th:action="@{/saveTypePolice}" th:object="${typePolice}" method="post">
@@ -27,7 +27,7 @@
                         <label>Taux TVA</label>
                         <input type="number" step="0.01" th:field="*{tauxTVA}" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-primary">Update TypePolice</button>
+                    <button type="submit" class="btn btn-primary">Modifier Type Police</button>
                 </form>
             </div>
         </div>
