--- a/src/main/resources/templates/formPolice.html
+++ b/src/main/resources/templates/formPolice.html
@@ -11,7 +11,7 @@
 <div layout:fragment="content1">
     <div class="container mt-2">
         <div class="card">
-            <div class="card-header">New Police</div>
+            <div class="card-header">Nouvelle Police</div>
             <div class="card-body">
                 <form th:action="@{/savePolice}" th:object="${police}" method="post">
                     <div class="form-group">
@@ -42,7 +42,7 @@
                                     th:text="${client.nom}"></option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-success mt-2">Save</button>
+                    <button type="submit" class="btn btn-success mt-2">Ajouter</button>
                 </form>
             </div>
         </div>
