--- a/src/main/resources/templates/polices.html
+++ b/src/main/resources/templates/polices.html
@@ -14,9 +14,9 @@
             <div class="card-header">Liste des Polices</div>
             <div class="card-body">
                 <form th:action="@{/polices}" method="get">
-                    <label for="keyword">Keyword</label>
+                    <label for="keyword">Mot-clé</label>
                     <input type="text" name="keyword" th:value="${keyword}" id="keyword" class="form-control" style="width: 200px; display: inline;">
-                    <button class="btn btn-primary" type="submit">Search</button>
+                    <button class="btn btn-primary" type="submit">Rechercher</button>
                 </form>
                 <table class="table table-striped shadow mt-2">
                     <thead>
@@ -39,8 +39,8 @@
                         <td th:text="${p.utilisateur.nom}"></td>
                         <td th:text="${p.client.nom}"></td>
                         <td>
-                            <a class="btn btn-primary" th:href="@{/updatePolice(id=${p.id},page=${currentPage},keyword=${keyword})}">Update</a>
-                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger" th:href="@{/deletePolice(id=${p.id},keyword=${keyword},page=${currentPage})}">Delete</a>
+                            <a class="btn btn-primary" th:href="@{/updatePolice(id=${p.id},page=${currentPage},keyword=${keyword})}">Modifier</a>
+                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger" th:href="@{/deletePolice(id=${p.id},keyword=${keyword},page=${currentPage})}">Supprimer</a>
                         </td>
                     </tr>
                     </tbody>
