--- a/src/main/resources/templates/releve.html
+++ b/src/main/resources/templates/releve.html
@@ -16,11 +16,11 @@
             <div class="card-header">Liste des Releves</div>
             <div class="card-body">
                 <form th:action="@{/releves}" method="get" class="mb-3">
-                    <label>Start Date</label>
+                    <label> Date Début </label>
                     <input type="date" name="startDate" th:value="${startDate}" class="form-control mb-2">
-                    <label>End Date</label>
+                    <label> Date Fin</label>
                     <input type="date" name="endDate" th:value="${endDate}" class="form-control mb-2">
-                    <button class="btn btn-primary mt-2" type="submit">Search</button>
+                    <button class="btn btn-primary mt-2" type="submit">Rechercher</button>
                 </form>
                 <table class="table table-striped shadow">
                     <thead>
@@ -54,8 +54,8 @@
                                     <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z"/>
                                 </svg>
                             </a>
-                            <a class="btn btn-primary btn-sm" th:href="@{/updateReleve(id=${r.id},page=${currentPage},startDate=${startDate},endDate=${endDate})}">Update</a>
-                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger btn-sm" th:href="@{/deleteReleve(id=${r.id},startDate=${startDate},endDate=${endDate},page=${currentPage})}">Delete</a>
+                            <a class="btn btn-primary btn-sm" th:href="@{/updateReleve(id=${r.id},page=${currentPage},startDate=${startDate},endDate=${endDate})}">Modifier</a>
+                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger btn-sm" th:href="@{/deleteReleve(id=${r.id},startDate=${startDate},endDate=${endDate},page=${currentPage})}">Supprimer</a>
                         </td>
                     </tr>
                     </tbody>
