--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -133,6 +133,15 @@
                         <li><a class="dropdown-item" th:href="@{/detailsFactures}">Chercher</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Utilisateur
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/formUtilisateur}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/Utilisateur}">Chercher</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="navbar-nav mx-3">
 
