--- a/src/main/resources/templates/typePolice.html
+++ b/src/main/resources/templates/typePolice.html
@@ -11,14 +11,14 @@
 
 <div layout:fragment="content1">
     <div class="container mt-2">
-        <h1>Liste des TypePolices</h1>
+        <h1>Liste des Types Polices</h1>
         <div class="card">
-            <div class="card-header">Liste des TypePolices</div>
+            <div class="card-header">Liste des Types Polices</div>
             <div class="card-body">
                 <form th:action="@{/typePolices}" method="get" class="mb-3">
-                    <label>Keyword</label>
+                    <label>Mot-clé</label>
                     <input type="text" name="keyword" th:value="${keyword}" class="form-control mb-2">
-                    <button class="btn btn-primary mt-2" type="submit">Search</button>
+                    <button class="btn btn-primary mt-2" type="submit">Rechercher</button>
                 </form>
                 <table class="table table-striped shadow">
                     <thead>
@@ -35,8 +35,8 @@
                         <td th:text="${tp.libelle}"></td>
                         <td th:text="${tp.tauxTVA}"></td>
                         <td>
-                            <a class="btn btn-primary btn-sm" th:href="@{/updateTypePolice(id=${tp.id},page=${currentPage},keyword=${keyword})}">Update</a>
-                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger btn-sm" th:href="@{/deleteTypePolice(id=${tp.id},keyword=${keyword},page=${currentPage})}">Delete</a>
+                            <a class="btn btn-primary btn-sm" th:href="@{/updateTypePolice(id=${tp.id},page=${currentPage},keyword=${keyword})}">Modifier</a>
+                            <a onclick="return confirm('Are you sure?')" class="btn btn-danger btn-sm" th:href="@{/deleteTypePolice(id=${tp.id},keyword=${keyword},page=${currentPage})}">Supprimer</a>
                         </td>
                     </tr>
                     </tbody>
@@ -48,7 +48,7 @@
 <!--                        </li>-->
 <!--                    </ul>-->
 <!--                </nav>-->
-                <a class="btn btn-success mt-2" th:href="@{/formTypePolice}">Ajouter TypePolice</a>
+                <a class="btn btn-success mt-2" th:href="@{/formTypePolice}">Ajouter Type Police</a>
             </div>
         </div>
     </div>
