--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -138,8 +138,8 @@
                         Utilisateur
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formUtilisateur}">Nouveau</a></li>
-                        <li><a class="dropdown-item" th:href="@{/Utilisateur}">Chercher</a></li>
+                        <li><a class="dropdown-item" th:href="@{/users/formUtilisateur}">Nouveau</a></li>
+                        <li><a class="dropdown-item" th:href="@{/users/utilisateur}">Chercher</a></li>
                     </ul>
                 </li>
             </ul>
