--- a/src/main/resources/templates/formUtilisateur.html
+++ b/src/main/resources/templates/formUtilisateur.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="template1">
 <head>
     <meta charset="UTF-8">
     <title>Formulaire Utilisateur</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container mt-5">
+<div  layout:fragment="content1" class="container mt-5">
     <div class="card">
         <div class="card-header">
             <h1 th:text="${user.id} != null ? 'Éditer Utilisateur' : 'Créer Utilisateur'"></h1>
         </div>
         <div class="card-body">
-            <form th:action="@{${user.id} != null ? '/users/' + ${user.id} + '/update' : '/users'}" th:object="${user}" method="post">
+            <form method="post">
                 <div class="form-group">
                     <label for="nom">Nom</label>
-                    <input type="text" id="nom" name="nom" class="form-control" th:field="*{nom}" required>
+                    <input type="text" id="nom" name="nom" class="form-control"  required>
                 </div>
                 <div class="form-group">
                     <label for="prenom">Prénom</label>
-                    <input type="text" id="prenom" name="prenom" class="form-control" th:field="*{prenom}" required>
+                    <input type="text" id="prenom" name="prenom" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" th:field="*{email}" required>
+                    <input type="email" id="email" name="email" class="form-control"  required>
                 </div>
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" class="form-control" th:field="*{password}" th:required="${user.id} == null}">
+                    <input type="password" id="password" name="password" class="form-control"  >
                 </div>
                 <div class="form-group">
                     <label for="telephone">Téléphone</label>
-                    <input type="tel" id="telephone" name="telephone" class="form-control" th:field="*{telephone}" required>
+                    <input type="tel" id="telephone" name="telephone" class="form-control"required>
                 </div>
                 <div class="form-group">
                     <label for="role">Rôle</label>
-                    <select id="role" name="role" class="form-control" th:field="*{role}" required>
+                    <select id="role" name="role" class="form-control" required>
                         <option value="admin">Administrateur</option>
                         <option value="infra">Infrastructure</option>
                         <option value="finance">Finance</option>
